syntax = "proto3";

package other;

import "responses.proto";

import "parameters.proto";

import "google/api/annotations.proto";

import "google/protobuf/empty.proto";

import "google/protobuf/descriptor.proto";

message Person {
  int64 id = 1;

  int64 age = 2;

  string name = 3;

  repeated string photo_urls = 4;
}

message TestExternalReferenceResponses {
  responses.Response ok = 1;
}

message TestExernalReference2Parameters {
  parameters.Parameter2 parameter2 = 1;
}

message TestAdditionalPropertiesOK {
  map<string, int32> additional_properties = 1;
}

message TestAdditionalPropertiesOK {
  TestAdditionalPropertiesOK test_additional_properties_ok = 1;
}

message TestAdditionalPropertiesResponses {
  TestAdditionalPropertiesOK ok = 1;
}

message TestAdditionalPropertiesReferenceOK {
  map<string, Person> additional_properties = 1;
}

message TestAdditionalPropertiesReferenceOK {
  TestAdditionalPropertiesReferenceOK test_additional_properties_reference_ok = 1;
}

message TestAdditionalPropertiesReferenceResponses {
  TestAdditionalPropertiesReferenceOK ok = 1;
}

message TestAdditionalPropertiesArrayOK {
}

message TestAdditionalPropertiesArrayOK {
  TestAdditionalPropertiesArrayOK test_additional_properties_array_ok = 1;
}

message TestAdditionalPropertiesArrayResponses {
  TestAdditionalPropertiesArrayOK ok = 1;
}

service Other {
  rpc TestExternalReference ( google.protobuf.Empty ) returns ( TestExternalReferenceResponses ) {
    option (google.api.http) = { get:"/testExternalReference"  };
  }

  rpc TestExernalReference2 ( TestExernalReference2Parameters ) returns ( google.protobuf.Empty ) {
    option (google.api.http) = { get:"/testExternalReference2" body:"Parameter2"  };
  }

  rpc TestAdditionalProperties ( google.protobuf.Empty ) returns ( TestAdditionalPropertiesResponses ) {
    option (google.api.http) = { get:"/testAdditionalProperties"  };
  }

  rpc TestAdditionalPropertiesReference ( google.protobuf.Empty ) returns ( TestAdditionalPropertiesReferenceResponses ) {
    option (google.api.http) = { get:"/testAdditionalPropertiesReference"  };
  }

  rpc TestAdditionalPropertiesArray ( google.protobuf.Empty ) returns ( TestAdditionalPropertiesArrayResponses ) {
    option (google.api.http) = { get:"/testAdditionalPropertiesArray"  };
  }
}

